<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">iPassbook</string>
    <string name="back">Back</string>
    <string name="register_passbook">Register Passbook</string>
    <string name="get_deposit_form">Get Deposit Form</string>
    <string name="get_withdraw_form">Get Withdraw Form</string>
    <string name="search_passbooks">Search Passbooks</string>
    <string name="report">Report</string>
    <string name="change_regulations">Change Regulations</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="color">Color</string>
    <string name="ipassbook">iPassBook</string>
    <string name="passbook_management">passbook management</string>
    <string name="date">Date: </string>
    <string name="passbook_types">Passbook Types</string>
    <string name="month">Month</string>
    <string name="passbook_type">Passbook Type</string>
    <string name="submit">Submit</string>
    <string name="min_deposit">Min Deposit</string>
    <string name="term">Term</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="by_date">By Date</string>
    <string name="by_month">By Month</string>
    <string name="nothing_to_display">Nothing to display</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title">Title</string>
    <string name="three_months_type">Three Months Type</string>
    <string name="six_month_types">Six Month Types</string>
    <string name="infinite_type">Infinite Type</string>
    <string name="passbook_id_is_not_existed">Passbook Id is not existed</string>
    <string name="passbook_type_must_be_infinite_type">Passbook Type must be infinite type</string>
    <string name="passbook_have_not_closed_yet">Passbook haven\'t closed yet!</string>
    <string name="passbook_has_closed">Passbook has closed!</string>
    <string name="customer_id_is_wrong">Customer Id is wrong</string>
    <string name="amount_must_greater_then">Amount must greater then</string>
    <string name="value_must_be_greater_than_0">Value must be greater than %d</string>
    <string name="succeed">Succeed</string>
    <string name="select_date">Select date</string>
    <string name="passbook_id_was_existed">Passbook Id was existed</string>
    <string name="address">Address</string>
    <string name="passbook_id">Passbook Id</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_id">Customer Id</string>
    <string name="identify_number">Identify Number</string>
    <string name="register_date">Register Date</string>
    <string name="deposit_slip">Deposit Slip</string>
    <string name="deposit_date">Deposit Date</string>
    <string name="withdrawal_slip">Withdrawal Slip</string>
    <string name="withdraw_date">Withdraw Date</string>
    <string name="date_report">Date Report</string>
    <string name="month_report">Month Report</string>
    <string name="creation_date">Creation Date</string>
    <string name="deposit_total">Deposit Total</string>
    <string name="withdrawal_total">Withdrawal Total</string>
    <string name="difference">Difference</string>
    <string name="pick_up_date">Pick Up Date</string>
    <string name="opened_passbook">Opened Passbook</string>
    <string name="closed_passbook">Closed Passbook</string>
    <string name="ordinal_number">Ordinal Number</string>
    <string name="regulations">Regulations</string>
    <string name="min_term">Min Term</string>
    <string name="amount">Amount</string>
    <string name="you_must_deposit_at_least_dates">You must deposit at least %d dates</string>
    <string name="handle_successfully">Handle successfully</string>
    <string name="handle_failed">Handle failed</string>
    <string name="enable_passbook_types">Enable Passbook Types</string>
    <string name="change_regulation">Change Regulation</string>
    <string name="select_month_and_passbook_type">Select Month And Passbook Type</string>
    <string name="amount_must_be_smaller_than_current_deposit">Amount must be smaller than current deposit</string>
    <string name="ok">OK</string>
    <string name="you_must_fill_out_this_field">You must fill out this field</string>
    <string name="select_theme">Select Theme</string>
    <string name="pink">Pink</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="cancel">Cancel</string>
    <string name="theme">Theme</string>
    <string name="passbook_type_colon">PassBook Type: </string>
    <string name="month_colon">Month: </string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="select_language">Select Language</string>
    <string name="application_for_managing_passbooks">Application for managing passbooks</string>
    <string name="product">Product</string>
    <string name="product_name_colon_">Product Name:</string>
    <string name="version_colon__">Version: </string>
    <string name="min_android_version_colon__">Min Android Version: </string>
    <string name="source_code_colon__">Source Code: </string>
    <string name="description_colon__">Description: </string>
    <string name="author">Author</string>
    <string name="author_name_colon__">Author Name: </string>
    <string name="email_colon__">Email: </string>
    <string name="github_colon__">Github: </string>
    <string name="mtrl_picker_confirm" tools:override="true">OK</string>
    <string name="the_difference_is_equal_to_total_revenue_minus_total_expenditure">The difference is equal to total revenue minus total expenditure</string>
    <string name="the_difference_is_equal_to_num_of_opened_passbook_minus_num_of_closed_passbook">The difference is equal to num of Opened Passbook minus num of Closed Passbook</string>


    <string name="pick_up_month">Pick up month</string>
    <string name="loading_regulation">loading bank regulations …</string>
    <string name="loading_passbook_regulation">loading passbook regulations …</string>
    <string name="loading_passbook_records">loading passbook records …</string>
    <string name="finished">Finished!</string>
    <string name="loading">loading …</string>
    <string name="note">Note:</string>
    <string name="total_revenue">Total revenue</string>
    <string name="total_expenditure">Total expenditure</string>
    <string name="have_error">Have error</string>
    <string name="interest">Interest</string>
    <string name="your_interest">"Your interest: "</string>
    <string name="state">State</string>
    <string name="opening">Opening</string>
    <string name="closed">Closed</string>
</resources>