<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/base_padding">

    <ImageView
        android:id="@+id/imgLogo"
        android:src="@drawable/passbook_icon"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/about_image_size"
        android:layout_height="@dimen/about_image_size"
        android:layout_margin="@dimen/base_margin"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/base_margin">
        <TextView
            android:text="@string/product"
            android:id="@+id/txtProduct"
            android:textColor="?android:attr/colorPrimary"
            android:textSize="@dimen/large_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtProductLabel"
                android:text="@string/product_name_colon_"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/base_control_margin"/>
            <TextView
                android:id="@+id/txtProductName"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/txtProductLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtVersionLabel"
                android:text="@string/version_colon__"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/base_control_margin"/>
            <TextView
                android:id="@+id/txtVersion"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/txtVersionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtMinAndroidVersionLabel"
                android:text="@string/min_android_version_colon__"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/base_control_margin"/>
            <TextView
                android:id="@+id/txtMinAndroidVersion"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/txtMinAndroidVersionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtSourceCodeLabel"
                android:text="@string/source_code_colon__"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/base_control_margin"/>
            <TextView
                android:id="@+id/txtSourceCode"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/txtSourceCodeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtDesLabel"
                android:text="@string/description_colon__"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/base_control_margin"/>
            <TextView
                android:id="@+id/txtDescription"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/txtDesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/base_margin">
        <TextView
            android:text="@string/author"
            android:id="@+id/txtAuthor"
            android:textColor="?android:attr/colorPrimary"
            android:textSize="@dimen/large_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtAuthorNameLabel"
                android:text="@string/author_name_colon__"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/base_control_margin"/>
            <TextView
                android:id="@+id/txtAuthorName"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/txtAuthorNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtEmailLabel"
                android:text="@string/email_colon__"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/base_control_margin"/>
            <TextView
                android:id="@+id/txtEmail"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/txtEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtGithubLabel"
                android:text="@string/github_colon__"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/base_control_margin"/>
            <TextView
                android:id="@+id/txtGithub"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/txtGithubLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>